--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h3>Home</h3>
+<h3>Главная</h3>
 <% @users.each do |user| %>
-  <p>User: <%=link_to user.name, user %></p>
+  <p>Пользователь: <%=link_to user.name, user %></p>
 <% end %>
