--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,14 +2,14 @@
   <%= simple_form_for user, :url => user_path(user), :html => {:method => :put, :class => 'form-horizontal' } do |f| %>
     <div class="modal-header">
       <a class="close" data-dismiss="modal">&#215;</a>
-      <h3>Change Role</h3>
+      <h3>Изменить роль</h3>
     </div>
     <div class="modal-body">
       <%= f.input :role_ids, :collection => Role.all, :as => :radio_buttons, :label_method => lambda {|t| t.name.titleize}, :label => false, :item_wrapper_class => 'inline', checked: user.role_ids.first %>
     </div>
     <div class="modal-footer">
-      <%= f.submit "Change Role", :class => "btn" %>
-      <a class="btn" data-dismiss="modal" href="#">Close</a>
+      <%= f.submit "Изменить роль", :class => "btn" %>
+      <a class="btn" data-dismiss="modal" href="#">Закрыть</a>
     </div>
   <% end %>
 </div>
