--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,10 +3,10 @@
 <table class="table table-condensed">
   <thead>
     <tr>
-      <th>Username</th>
-      <th>Email</th>
-      <th>Registered</th>
-      <th>Role</th>
+      <th>Имя пользователя</th>
+      <th>Электронный адрес</th>
+      <th>Дата регистрации</th>
+      <th>Роль</th>
       <th></th>
       <th></th>
     </tr>
@@ -22,7 +22,7 @@
         <a data-toggle="modal" href="#role-options-<%= user.id %>" class="btn btn-mini" type="button">Change role</a>
         <%= render user %>
       </td>
-      <td><%= link_to("Delete user", user_path(user), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'btn btn-mini') unless user == current_user %></td>
+      <td><%= link_to("Удалить пользователя", user_path(user), :data => { :confirm => "Вы уверены?" }, :method => :delete, :class => 'btn btn-mini') unless user == current_user %></td>
     </tr>
   <% end %>
   </tbody>
