--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
-<h3>User</h3>
-<p>User: <%= @user.name %></p>
-<p>Email: <%= @user.email if @user.email %></p>
+<h3>Пользователь</h3>
+<p>Имя пользователя: <%= @user.name %></p>
+<p>Электронный пользователь: <%= @user.email if @user.email %></p>
